Fix modals overflow

--- a/packages/editor/src/components/common/modal/modalContainer/style.less
+++ b/packages/editor/src/components/common/modal/modalContainer/style.less
@@ -11,4 +11,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 15px;
 }
