--- a/packages/editor/src/style/index.less
+++ b/packages/editor/src/style/index.less
@@ -147,14 +147,9 @@ a:active,a:focus {
 }
 
 .modal {
-    overflow: hidden;
-    position: absolute;
-    display: block;
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translate(-50%);
-    top: 100px;
+    max-height: 100%;
+    max-width: 100%;
+    overflow: auto;
 }
 
 .dropDown {
